tests/integration/error/opaque_wrong_vec_handle.alo
// expect-error: Type mismatch in argument 1 of function 'vec_int_push': expected '&VecInt', got '&Arena'

fun main() -> void {
    imut arena = arena_new();
    vec_int_push(arena, 1);
}
